--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "axios": "^0.18.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0",
+    "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-eslint": "^3.0.0",
-    "@vue/cli-service": "^3.0.0",
+    "@vue/cli-service": "^4.3.1",
     "@vue/eslint-config-prettier": "^3.0.0",
     "vue-template-compiler": "^2.5.17"
   }
